[Issue 1607] regex ^\s*$ does not work on IE8

--- a/core/core.web/src/main/webapp/styles/structure.css
+++ b/core/core.web/src/main/webapp/styles/structure.css
@@ -26,7 +26,9 @@ html,body {
 	margin: 0;
 	background-color: #EBEAE5;
 }
-
+img {
+	border:none;
+}
 table {
 	width: 100%;
 	font-size: 100%;
